--- a/src/app/pages/user/instructions/instructions.component.css
+++ b/src/app/pages/user/instructions/instructions.component.css
@@ -32,8 +32,8 @@
 
 /* Main Card */
 .quiz-instruction-container {
-  max-width: auto;
-  margin: 2rem auto;
+     /* max-width: 990px; */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .instruction-card {
