committing quiz closed and open state

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -97,7 +97,7 @@ text="Loading instructions"
           <!-- <app-load-quiz></app-load-quiz> -->
 
 
-          <router-outlet></router-outlet>
+          <!-- <router-outlet></router-outlet> -->
 
           
         </div>
