--- a/src/app/pages/layouts/user-layout/user-layout.component.html
+++ b/src/app/pages/layouts/user-layout/user-layout.component.html
@@ -1,26 +1,18 @@
-
 <!-- </div> -->
- <!-- <app-sidebar></app-sidebar> -->
-     <!-- <app-navbar></app-navbar>
+<!-- <app-sidebar></app-sidebar> -->
+<!-- <app-navbar></app-navbar>
 <router-outlet></router-outlet> -->
 
 <!-- <app-footer></app-footer> -->
 
 
 
-
-<div class="bootstrap-wrapper">
-    <div class="container-fluid">
-        <div class="row">
-
-           
-
-            <div class="col-md-12">
-                <app-navbar></app-navbar>
-            <!-- <router-outlet></router-outlet> -->
-
-            </div>
-
-        </div>
-    </div>
-</div>
+<!-- <div class="bootstrap-wrapper">
+    <div class="container-fluid"> -->
+        <!-- Navigation Column -->
+        <app-user-navbar></app-user-navbar>
+        <app-userfooter></app-userfooter>
+        <!-- Main Content Column -->
+        <!-- <router-outlet></router-outlet> -->
+    <!-- </div>
+</div> -->
