--- a/src/app/pages/user/instructions/instructions.component.css
+++ b/src/app/pages/user/instructions/instructions.component.css
@@ -34,6 +34,9 @@
 .quiz-instruction-container {
      /* max-width: 990px; */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+     margin: 24px auto;
+    max-width: 1000px;
+    border-radius: 8px;
 }
 
 .instruction-card {
